syntax = "proto3";
option go_package = "/protos";

message GetFullNameRequest{
  string name=1;
}

message GetFullNameResponse{
  string fullName=1;
}