syntax = "proto3";
import "GetFullNameParams.proto";
option go_package = "/apis";

service NameService{
  rpc GetFullNameFunc(GetFullNameRequest) returns (GetFullNameResponse) {}
}